--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
+    "generate-gifts": "node scripts/generateGiftsList.js",
+    "prestart": "npm run generate-gifts",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prebuild": "npm run generate-gifts"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-view-shot": "^4.0.3",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
